--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,11 @@ replace = __version__ = '{new_version}'
 universal = 1
 
 [flake8]
-exclude = docs
-[tool:pytest]
-collect_ignore = ['setup.py']
+exclude =
+    .git,
+    __pycache__,
+    docs/source/conf.py,
+    old,
+    build,
+    dist
+max-complexity = 10
