--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
     -   id: pretty-format-json
     -   id: check-toml
 -   repo: https://github.com/psf/black
-    rev: 21.4b0
+    rev: 22.3.0
     hooks:
       - id: black
         language_version: python3.9
